# task_manager_flask

./: .gitignore  Procfile  README.md  makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: linter.yml  pytest.yml
migrations/versions/: 5b807e849d7a_.py  c4cf593e2751_initial_migration.py
task_manager/: __init__.py  app.py  config.py  main.py  manage.py  manager.py  models.py  schema.sql  sql_migr.py
task_manager/auths/: forms.py  models.py  users.py
task_manager/auths/templates/users/: edit_profile.html  user_list.html  user_login.html  user_profile.html  user_register.html
task_manager/auths/tests/: conftest.py  test_users_db.py  test_users_urls.py  test_users_views.py
task_manager/auths/tests/fixtures/: data.sql  sql_data.py
task_manager/database/: dbSchema.dbs  development_sql_fill.py  init_db_development.py  init_db_production.py  test_sql_data.py
task_manager/migrations/versions/: 0edfc9f2fd04_.py  61fa422b8c01_.py  bca4d7ed7f8e_.py  e81f4e0ef9ae_.py
task_manager/statuses/: forms.py  models.py  statuses.py
task_manager/statuses/templates/statuses/: edit_status.html  status_creation.html  status_detail.html  status_list.html
task_manager/statuses/tests/: conftest.py  test_statuses_urls.py
task_manager/tags/: forms.py  models.py  tags.py
task_manager/tags/tests/: conftest.py  test_tags_urls.py
task_manager/tasks/: forms.py  models.py  session.py  tasks.py  utils.py
task_manager/tasks/tests/: conftest.py  test_creation_task.py  test_tasks_urls.py
task_manager/templates/: base.html  index.html
(+8 files in other folders)
