[tool.poetry]
name = "task_manager_flask"
version = "0.1.0"
description = ""
authors = ["Vladimir <vvtatarinoff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-WTF = "^1.0.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bootstrap = "^3.3.7"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
