[tool.poetry]
name = "task_manager_flask"
version = "0.1.0"
description = ""
authors = ["Vladimir <vvtatarinoff@gmail.com>"]
packages = [
  { include = "task_manager" },]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-WTF = "^1.0.0"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Moment = = "^1.0.2"
Flask-Bootstrap = "^3.3.7"
email-validator = "^1.1.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
Faker = "^12.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
